# ecs_bench_suite

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
benches/: benchmarks.rs
src/: lib.rs
src/bevy/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/brood/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  serialize_binary.rs  serialize_text.rs  simple_insert.rs  simple_iter.rs
src/edict/: add_remove.rs  frag_iter.rs  mod.rs  simple_insert.rs  simple_iter.rs
src/hecs/: add_remove.rs  frag_iter.rs  heavy_compute.rs  mod.rs  serialize_binary.rs  serialize_text.rs  simple_insert.rs  simple_iter.rs
src/legion/: add_remove.rs  frag_iter.rs  heavy_compute.rs  mod.rs  schedule.rs  serialize_binary.rs  serialize_text.rs  simple_iter.rs
src/legion_2_4/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/legion_packed/: heavy_compute.rs  mod.rs  schedule.rs  simple_iter.rs
src/planck_ecs/: add_remove.rs  frag_iter.rs  mod.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/shipyard/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/shipyard_packed/: heavy_compute.rs  schedule.rs  simple_iter.rs
src/sparsey/: add_remove.rs  frag_iter.rs  mod.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/sparsey_packed/: mod.rs  schedule.rs  simple_iter.rs
src/specs/: add_remove.rs  frag_iter.rs  heavy_compute.rs  mod.rs  schedule.rs  serialize_binary.rs  simple_insert.rs  simple_iter.rs
