[package]
name = "ecs_bench_suite"
version = "0.1.0"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.17", feature = ["serde"] }
bincode = "1.3"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3"
legion = "0.3"
bevy_ecs = "0.1"
hecs = "0.3"
shipyard = "0.4"
specs = {version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"

[dev-dependencies]
criterion = "0.3"
rayon = "1.3"

[[bench]]
name = "benchmarks"
harness = false